// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: PasswordStrength ui default: Component: PasswordStrength => ui => default 1`] = `
<Fragment>
  <Progress
    barStyle={Object {}}
    className="mb-2"
    color="danger"
    max={100}
    min={0}
    style={Object {}}
    tag="div"
    value={0}
  />
  <div
    className="mb-2"
  >
    <div
      className="d-flex"
      key="lowercase"
    >
      <Icon
        className="align-bottom mt-1 mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      <div>
        Must contain at least one lowercase letter
      </div>
    </div>
    <div
      className="d-flex"
      key="minimumLength"
    >
      <Icon
        className="align-bottom mt-1 mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      <div>
        Must contain at least 10 characters
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`Component: PasswordStrength ui without meter: Component: PasswordStrength => ui => without meter 1`] = `
<Fragment>
  <div
    className="mb-2"
  >
    <div
      className="d-flex"
      key="lowercase"
    >
      <Icon
        className="align-bottom mt-1 mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      <div>
        Must contain at least one lowercase letter
      </div>
    </div>
    <div
      className="d-flex"
      key="minimumLength"
    >
      <Icon
        className="align-bottom mt-1 mb-1 mr-3"
        color="danger"
        icon="cancel"
        size={16}
      />
      <div>
        Must contain at least 10 characters
      </div>
    </div>
  </div>
</Fragment>
`;
